--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       </nav>
     </header>
     
-    <!--Inicio seccion1-->
+    <!--INICIO SECCION1-->
   <section class="row">
     <section class="col-lg-12">
       <section class="banner-index2" id="hero">
